--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
     </nav>
     <main>
         <h3 align="center"><b>Login</b></h3>
-        <form action="emphome.html" method="POST">
+        <form action="emphome.html" method="GET">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
